# python_project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NEW_FEATURES_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SUMMARY.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
benchmarks/: sorting_benchmark.py
data/: README.md
data/samples/: sample_data.py
docs/: API_USAGE.md  DOCKER_DEPLOYMENT.md  FEATURES.md  LOGGING.md  README.md
docs/tutorials/: algorithms.md  data_structures.md  models.md
examples/: api_client_example.py  logging_example.py  ml_example.py  sorting_example.py
notebooks/: README.md
scripts/: docker_build.sh  format_code.sh  run_tests.sh  start_api.sh
src/: __init__.py
src/algorithms/: __init__.py
src/algorithms/backtracking/: __init__.py
src/algorithms/dynamic_programming/: __init__.py
src/algorithms/graph/: __init__.py
src/algorithms/greedy/: __init__.py
src/algorithms/searching/: __init__.py
src/algorithms/sorting/: __init__.py
src/api/: __init__.py  app.py  schemas.py
src/api/routes/: __init__.py  algorithms.py  health.py  models.py
src/config/: __init__.py
src/data_structures/: __init__.py
src/logging/: __init__.py  logger.py
src/models/: __init__.py
src/models/dl/: __init__.py
src/models/ml/: __init__.py
src/models/statistical/: __init__.py
src/utils/: __init__.py
tests/: test_api.py  test_logging.py
tests/test_algorithms/: __init__.py  test_searching.py  test_sorting.py
tests/test_data_structures/: __init__.py  test_basic.py
